--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 # will have compiled files and executables
 debug/
 target/
+prompts/
+archive/
+
+.config
+.env
+
+quickchat_config.toml
+query_gguf_config.toml
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
